--- a/cloudformation/memsub-promotions-cf.yaml
+++ b/cloudformation/memsub-promotions-cf.yaml
@@ -81,6 +81,9 @@ Resources:
             Action: s3:GetObject
             Resource: 'arn:aws:s3:::gu-promotions-tool-dist/*'
           - Effect: Allow
+            Action: s3:GetObject
+            Resource: 'arn:aws:s3:::membership-private/membership_directory_cert.p12'
+          - Effect: Allow
             Action: ec2:DescribeTags
             Resource: '*'
           - Effect: Allow
