Use mapping instead of parameter

--- a/cloudformation/memsub-promotions-cf.yaml
+++ b/cloudformation/memsub-promotions-cf.yaml
@@ -57,12 +57,20 @@ Parameters:
     Description: Security group that grants access to the account's Vulnerability
       Scanner
     Type: AWS::EC2::SecurityGroup::Id
-  ReadableS3Resources:
-    Description: List of S3 resources that this app should be allowed to read
-    Type: CommaDelimitedList
-    AllowedValues:
-    - arn:aws:s3:::gu-reader-revenue-private/membership/promotions-tool/PROD/*,arn:aws:s3:::gu-promotions-tool-dist/*,arn:aws:s3:::membership-private/membership_directory_cert.p12
-    - arn:aws:s3:::gu-reader-revenue-private/membership/promotions-tool/CODE/*,arn:aws:s3:::gu-promotions-tool-dist/*,arn:aws:s3:::membership-private/membership_directory_cert.p12
+
+Mappings:
+    StageMap:
+      CODE:
+        ReadableS3Resources:
+          - arn:aws:s3:::gu-reader-revenue-private/membership/promotions-tool/CODE/*
+          - arn:aws:s3:::gu-promotions-tool-dist/*
+          - arn:aws:s3:::membership-private/membership_directory_cert.p12
+      PROD:
+        ReadableS3Resources:
+          - arn:aws:s3:::gu-reader-revenue-private/membership/promotions-tool/PROD/*
+          - arn:aws:s3:::gu-promotions-tool-dist/*
+          - arn:aws:s3:::membership-private/membership_directory_cert.p12
+
 Resources:
   ServerRole:
     Type: AWS::IAM::Role
@@ -82,10 +90,10 @@ Resources:
           Statement:
           - Effect: Deny # Explicitly deny access to all S3 resources except for those defined in ReadableS3Resources
             Action: s3:*
-            NotResource: !Ref ReadableS3Resources
+            NotResource: !FindInMap [StageMap, !Ref Stage, ReadableS3Resources]
           - Effect: Allow
             Action: s3:GetObject
-            Resource: !Ref ReadableS3Resources
+            Resource: !FindInMap [StageMap, !Ref Stage, ReadableS3Resources]
           - Effect: Allow
             Action: ec2:DescribeTags
             Resource: '*'
