Create a scheduled backup lambda. Also tidied up some CFN and environment configs.

--- a/lambdas/riff-raff.yaml
+++ b/lambdas/riff-raff.yaml
@@ -13,3 +13,4 @@ deployments:
       - MembershipSub-Promotions-to-PromoCode-View-
       - MembershipSub-PromoCode-View-Dynamo-to-Data-Lake-
       - MembershipSub-PromoCode-View-Dynamo-to-Salesforce-
+      - MembershipSub-Promotions-Scheduled-Dynamo-Backup-
