Fix broken CFN and set a new time for backup

--- a/cloudformation/memsub-promotions-lambdas-cf.yaml
+++ b/cloudformation/memsub-promotions-lambdas-cf.yaml
@@ -306,11 +306,11 @@ Resources:
   BackupSchedule:
     Type: AWS::Events::Rule
     Properties:
-      ScheduleExpression: cron(0 12 * * ? *)
-      State: String
+      ScheduleExpression: cron(30 11 * * ? *)
+      State: ENABLED
       Targets:
-        Id: ScheduledBackupLambdaPRODScheduler
-        Arn: !GetAtt [ScheduledBackupLambdaPROD, Arn]
+        - Id: ScheduledBackupLambdaPRODScheduler
+          Arn: !GetAtt [ScheduledBackupLambdaPROD, Arn]
   InvokeLambdaPermission:
     Type: AWS::Lambda::Permission
     Properties:
