Code review tweaks of nomenclature.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -169,14 +169,14 @@ touchpoint.backend.environments {
         six="2c92a0fc5a2a49f0015a41f473da233a"
       }
       domestic {
-        yearly=""
-        quarterly=""
-        six=""
+        yearly="2c92a0fe6619b4b901661aa8e66c1692"
+        quarterly="2c92a0fe6619b4b301661aa494392ee2"
+        six="2c92a0086619bf8901661aaac94257fe"
       }
       row {
-        yearly=""
-        quarterly=""
-        six=""
+        yearly="2c92a0fe6619b4b601661ab300222651"
+        quarterly="2c92a0086619bf8901661ab02752722f"
+        six="2c92a0086619bf8901661ab545f51b21"
       }
     }
   }
