The Lambda was prevented from deleting old backups due to this permission not being there. This might have also been causing the Lambda to execute three times.

--- a/cloudformation/memsub-promotions-lambdas-cf.yaml
+++ b/cloudformation/memsub-promotions-lambdas-cf.yaml
@@ -95,6 +95,7 @@ Resources:
             - dynamodb:CreateBackup
             - dynamodb:ListBackups
             - dynamodb:DescribeBackup
+            - dynamodb:DeleteBackup
             Resource:
             - '*'
   MembershipSubPromoCodeViewETLRole:
