Add the one-year GW plans to the promo tool so we can discount 1-year renewals

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -58,11 +58,13 @@ touchpoint.backend.environments {
       domestic {
         yearly="2c92c0f965d280590165f16b1b9946c2"
         quarterly="2c92c0f965dc30640165f150c0956859"
+        oneyear="2c92c0f867cae0700167eff921734f7b"
         six="2c92c0f965f212210165f69b94c92d66"
       }
       row {
         yearly="2c92c0f965f2122101660fb33ed24a45"
         quarterly="2c92c0f965f2122101660fb81b745a06"
+        oneyear="2c92c0f967caee410167eff78e7b5244"
         six="2c92c0f965f2122101660fbc75a16c38"
       }
     }
@@ -114,11 +116,13 @@ touchpoint.backend.environments {
       domestic {
         yearly="2c92c0f9660fc4d70166107fa5412641"
         quarterly="2c92c0f8660fb5d601661081ea010391"
+        oneyear="2c92c0f867cae0700167f043870d6d0e"
         six="2c92c0f8660fb5dd016610858eb90658"
       }
       row {
         yearly="2c92c0f9660fc4d70166109a2eb0607c"
         quarterly="2c92c0f9660fc4d70166109c01465f10"
+        oneyear="2c92c0f967caee360167f044cd0d4adc"
         six="2c92c0f9660fc4c70166109dfd08092c"
       }
 
@@ -169,11 +173,13 @@ touchpoint.backend.environments {
         six="2c92a0fc5a2a49f0015a41f473da233a"
       }
       domestic {
+        oneyear="2c92a0ff67cebd0d0167f0a1a834234e"
         yearly="2c92a0fe6619b4b901661aa8e66c1692"
         quarterly="2c92a0fe6619b4b301661aa494392ee2"
         six="2c92a0086619bf8901661aaac94257fe"
       }
       row {
+        oneyear="2c92a0ff67cebd140167f0a2f66a12eb"
         yearly="2c92a0fe6619b4b601661ab300222651"
         quarterly="2c92a0086619bf8901661ab02752722f"
         six="2c92a0086619bf8901661ab545f51b21"
