--- a/cloudformation/memsub-promotions-cf.yaml
+++ b/cloudformation/memsub-promotions-cf.yaml
@@ -201,7 +201,7 @@ Resources:
       SecurityGroups:
       - !Ref 'InstanceSecurityGroup'
       InstanceType: !Ref 'InstanceType'
-      AssociatePublicIpAddress: 'True'
+      AssociatePublicIpAddress: 'False'
       IamInstanceProfile: !Ref 'InstanceProfile'
       UserData:
         "Fn::Base64":
