Update node version of Lambdas as AWS no longer supports 6.10. Also ensure environment variables are maintained between cloudformings

--- a/cloudformation/memsub-promotions-lambdas-cf.yaml
+++ b/cloudformation/memsub-promotions-lambdas-cf.yaml
@@ -149,7 +149,7 @@ Resources:
       Handler: MembershipSub-Promotions-to-PromoCode-View-Lambda.handler
       MemorySize: 128
       Role: !GetAtt [MembershipSubPromoCodeViewLambdaRole, Arn]
-      Runtime: nodejs6.10
+      Runtime: nodejs10.x
       Timeout: 10
   PromoCodeViewLambdaFunctionUAT:
     Type: AWS::Lambda::Function
@@ -163,7 +163,7 @@ Resources:
       Handler: MembershipSub-Promotions-to-PromoCode-View-Lambda.handler
       MemorySize: 128
       Role: !GetAtt [MembershipSubPromoCodeViewLambdaRole, Arn]
-      Runtime: nodejs6.10
+      Runtime: nodejs10.x
       Timeout: 10
   PromoCodeViewLambdaFunctionPROD:
     Type: AWS::Lambda::Function
@@ -177,7 +177,7 @@ Resources:
       Handler: MembershipSub-Promotions-to-PromoCode-View-Lambda.handler
       MemorySize: 128
       Role: !GetAtt [MembershipSubPromoCodeViewLambdaRole, Arn]
-      Runtime: nodejs6.10
+      Runtime: nodejs10.x
       Timeout: 10
   PromoCodeViewLambdaEventSourceDEV:
     Type: AWS::Lambda::EventSourceMapping
@@ -215,7 +215,7 @@ Resources:
       Handler: MembershipSub-PromoCode-View-Dynamo-to-Data-Lake.handler
       MemorySize: 128
       Role: !GetAtt [MembershipSubPromoCodeViewETLRole, Arn]
-      Runtime: nodejs6.10
+      Runtime: nodejs10.x
       Timeout: 10
 
   SalesforceLambdaKMSKey:
@@ -260,9 +260,16 @@ Resources:
       Handler: MembershipSub-PromoCode-View-Dynamo-to-Salesforce.handler
       MemorySize: 128
       Role: !GetAtt [MembershipSubPromoCodeViewETLRole, Arn]
-      Runtime: nodejs6.10
+      Runtime: nodejs10.x
       Timeout: 10
       KmsKeyArn: !GetAtt SalesforceLambdaKMSKey.Arn
+      Environment:
+        Variables:
+          client_id: ''
+          client_secret: ''
+          password: ''
+          salesforce_url: 'test.salesforce.com'
+          username: ''
   PromoCodeViewSalesforceLambdaFunctionUAT:
     Type: AWS::Lambda::Function
     Properties:
@@ -274,9 +281,16 @@ Resources:
       Handler: MembershipSub-PromoCode-View-Dynamo-to-Salesforce.handler
       MemorySize: 128
       Role: !GetAtt [MembershipSubPromoCodeViewETLRole, Arn]
-      Runtime: nodejs6.10
+      Runtime: nodejs10.x
       Timeout: 10
       KmsKeyArn: !GetAtt SalesforceLambdaKMSKey.Arn
+      Environment:
+        Variables:
+          client_id: ''
+          client_secret: ''
+          password: ''
+          salesforce_url: 'test.salesforce.com'
+          username: ''
   PromoCodeViewSalesforceLambdaFunctionPROD:
     Type: AWS::Lambda::Function
     Properties:
@@ -288,9 +302,16 @@ Resources:
       Handler: MembershipSub-PromoCode-View-Dynamo-to-Salesforce.handler
       MemorySize: 128
       Role: !GetAtt [MembershipSubPromoCodeViewETLRole, Arn]
-      Runtime: nodejs6.10
+      Runtime: nodejs10.x
       Timeout: 10
       KmsKeyArn: !GetAtt SalesforceLambdaKMSKey.Arn
+      Environment:
+        Variables:
+          client_id: ''
+          client_secret: ''
+          password: ''
+          salesforce_url: ''
+          username: ''
   ScheduledBackupLambdaPROD:
     Type: AWS::Lambda::Function
     Properties:
@@ -302,7 +323,7 @@ Resources:
       Handler: MembershipSub-Promotions-Scheduled-Dynamo-Backup.handler
       MemorySize: 128
       Role: !GetAtt [MembershipSubPromotionsDataBackupLambdaRole, Arn]
-      Runtime: nodejs8.10
+      Runtime: nodejs10.x
       Timeout: 30
       KmsKeyArn: !GetAtt SalesforceLambdaKMSKey.Arn
   BackupSchedule:
