--- a/nginx/promotions.conf
+++ b/nginx/promotions.conf
@@ -8,12 +8,11 @@ server {
 }
 
 server {
-    listen 443;
+    listen 443 ssl;
     server_name promo.thegulocal.com;
 
-    ssl on;
-    ssl_certificate STAR_thegulocal_com_exp2020-01-09.crt;
-    ssl_certificate_key STAR_thegulocal_com_exp2020-01-09.key;
+    ssl_certificate promo.thegulocal.com.crt;
+    ssl_certificate_key promo.thegulocal.com.key;
 
     ssl_session_timeout 5m;
 
