Add new three month fixed rate plan and remove old plans

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -38,34 +38,19 @@ touchpoint.backend.environments {
       saturday="2c92c0f961f9cf300161fc4d2e3e3664"
     }
     weekly {
-      zoneA {
-        yearly="2c92c0f8574b2b8101574c4a9480068d"
-        quarterly="2c92c0f8574b2b8101574c4a957706be"
-        oneyear="2c92c0f958aa455e0158aa6bc72f2aba"
-        six="2c92c0f85a2190ae015a22bbb6194518"
-      }
-      zoneB {
-        yearly="2c92c0f8574b2be601574c39888d6850"
-        quarterly="2c92c0f8574b2be601574c323ca15c7e"
-        oneyear="2c92c0f858aa38af0158b0f0610721d0"
-      }
-      zoneC {
-        yearly="2c92c0f858aa38af0158da325d2f0b3d"
-        quarterly="2c92c0f858aa38af0158da325cec0b2e"
-        oneyear="2c92c0f858aa38af0158da325d790b4b"
-        six="2c92c0f95a246217015a388eaa8c2e2d"
-      }
       domestic {
         yearly="2c92c0f965d280590165f16b1b9946c2"
         quarterly="2c92c0f965dc30640165f150c0956859"
         oneyear="2c92c0f867cae0700167eff921734f7b"
         six="2c92c0f965f212210165f69b94c92d66"
+        threemonths="2c92c0f96ded216a016df491134d4091"
       }
       row {
         yearly="2c92c0f965f2122101660fb33ed24a45"
         quarterly="2c92c0f965f2122101660fb81b745a06"
         oneyear="2c92c0f967caee410167eff78e7b5244"
         six="2c92c0f965f2122101660fbc75a16c38"
+        threemonths="2c92c0f96df75b5a016df81ba1c62609"
       }
     }
 
@@ -96,34 +81,19 @@ touchpoint.backend.environments {
       saturday="2c92c0f85b8fa30e015b9108a83253c7"
     }
     weekly {
-      zoneA {
-        yearly="2c92c0f8574654af015747f934cc4a04"
-        quarterly="2c92c0f9574ee3d80157514ee1c36a8e"
-        oneyear="2c92c0f858aa38ab0158ac0204ce2b56"
-        six="2c92c0f95a246220015a3d680fe1680d"
-      }
-      zoneB {
-        yearly="2c92c0f8574ebcdf015751506d7154ae"
-        quarterly="2c92c0f8574ebcdf015751506daf54c4"
-        oneyear="2c92c0f9585841e7015862c9128e153b"
-      }
-      zoneC {
-        yearly="2c92c0f958aa45650158da23e5eb29d8"
-        quarterly="2c92c0f958aa45650158da23e5ab29c9"
-        oneyear="2c92c0f958aa45650158da23e62d29e7"
-        six="2c92c0f95a24621b015a3d6ce9e32057"
-      }
       domestic {
         yearly="2c92c0f9660fc4d70166107fa5412641"
         quarterly="2c92c0f8660fb5d601661081ea010391"
         oneyear="2c92c0f867cae0700167f043870d6d0e"
         six="2c92c0f8660fb5dd016610858eb90658"
+        threemonths="2c92c0f96df75b51016df8444f36362f"
       }
       row {
         yearly="2c92c0f9660fc4d70166109a2eb0607c"
         quarterly="2c92c0f9660fc4d70166109c01465f10"
         oneyear="2c92c0f967caee360167f044cd0d4adc"
         six="2c92c0f9660fc4c70166109dfd08092c"
+        threemonths="2c92c0f96df75b5a016df84084fb356d"
       }
 
     }
@@ -155,34 +125,19 @@ touchpoint.backend.environments {
       saturday="2c92a0fd5e1dcf0d015e3cb39d0a7ddb"
     }
     weekly {
-      zoneA {
-        yearly="2c92a0ff57d0a0b60157d741e722439a"
-        quarterly="2c92a0fd57d0a9870157d7412f19424f"
-        oneyear="2c92a0ff58bdf4eb0158f2ecc89c1034"
-        six="2c92a0ff59d9d540015a41a40b3e07d3"
-      }
-      zoneB {
-        yearly="2c92a0fe57d0a0c40157d74240de5543"
-        quarterly="2c92a0fe57d0a0c40157d74241005544"
-        oneyear="2c92a0fd58cf57000158f30ae6d06f2a"
-      }
-      zoneC {
-        oneyear="2c92a0ff58bdf4ee0158f30905e82181"
-        yearly="2c92a0ff58bdf4eb0158f307eccf02af"
-        quarterly="2c92a0ff58bdf4eb0158f307ed0e02be"
-        six="2c92a0fc5a2a49f0015a41f473da233a"
-      }
       domestic {
         oneyear="2c92a0ff67cebd0d0167f0a1a834234e"
         yearly="2c92a0fe6619b4b901661aa8e66c1692"
         quarterly="2c92a0fe6619b4b301661aa494392ee2"
         six="2c92a0086619bf8901661aaac94257fe"
+        threemonths="2c92a00e6dd988e2016df85387417498"
       }
       row {
         oneyear="2c92a0ff67cebd140167f0a2f66a12eb"
         yearly="2c92a0fe6619b4b601661ab300222651"
         quarterly="2c92a0086619bf8901661ab02752722f"
         six="2c92a0086619bf8901661ab545f51b21"
+        threemonths="2c92a0076dd9892e016df8503e7c6c48"
       }
     }
   }
