WIP - webpack dev server not hot updating correctly

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -143,7 +143,7 @@ touchpoint.backend.environments {
   }
 }
 
-play.filters.headers.contentSecurityPolicy = "default-src 'self' fonts.googleapis.com fonts.gstatic.com media.gutools.co.uk data: wss: 'unsafe-inline'"
+play.filters.headers.contentSecurityPolicy = "default-src 'self' fonts.googleapis.com fonts.gstatic.com media.gutools.co.uk data: wss: 'unsafe-inline'; connect-src localhost:9501"
 play.application.loader = "wiring.AppLoader"
 include file("/etc/gu/memsub-promotions-keys.conf")
 
