--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,19 @@
     "js-dev": "./node_modules/webpack/bin/webpack.js --config Webpack.js --display-error-details --bail",
     "sass": "./node_modules/node-sass/bin/node-sass scss/main.scss ../public/stylesheets/main.css",
     "compile": "npm run js && npm run sass",
-    "dev": "npm run js-dev && npm run sass"
+    "dev": "npm run js-dev && npm run sass",
+    "start": "webpack-dev-server --config Webpack.js --mode development"
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-env",
+      "@babel/preset-react"
+    ]
   },
   "devDependencies": {
+    "@babel/core": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
+    "@babel/preset-react": "^7.7.4",
     "angular": "1.5.11",
     "angular-animate": "1.5.11",
     "angular-aria": "1.5.11",
@@ -25,7 +35,7 @@
     "angular-ui-router": "0.3.0",
     "angular-uuid": "0.0.2",
     "babel-core": "6.24.0",
-    "babel-loader": "6.4.0",
+    "babel-loader": "8.0.6",
     "babel-polyfill": "6.23.0",
     "babel-preset-es2015": "6.24.0",
     "grunt": "1.0.1",
@@ -33,6 +43,12 @@
     "ng-annotate-loader": "0.1.0",
     "node-sass": "4.5.0",
     "text-loader": "0.0.1",
-    "webpack": "1.13.0"
+    "webpack": "4.41.4",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.1"
+  },
+  "dependencies": {
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
   }
 }
