--- a/lambdas/package.json
+++ b/lambdas/package.json
@@ -11,14 +11,15 @@
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
     "babel-preset-env": "^1.4.0",
+    "dynamodb-doc": "^1.0.0",
     "node-riffraff-artefact": "^2.0.1"
   },
   "scripts": {
     "riffraff-artefact": "./node_modules/.bin/riffraff-artefact",
-    "dist" : "yarn install --production --modules-folder dist/node_modules",
+    "dist": "yarn install --production --modules-folder dist/node_modules",
     "compile": "babel src -d dist",
     "riffraff": "VERBOSE=true ARTEFACT_PATH=$PWD yarn riffraff-artefact",
-    "clean":"rm -rf dist && rm -rf target"
+    "clean": "rm -rf dist && rm -rf target"
   },
   "dependencies": {}
 }
