--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,17 @@
     "compile": "npm run js && npm run sass",
     "dev": "npm run js-dev && npm run sass"
   },
+  "babel": {
+    "presets": [
+      "@babel/preset-env"
+    ],
+    "plugins": [
+      "angularjs-annotate"
+    ]
+  },
   "devDependencies": {
+    "@babel/core": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
     "angular": "1.5.11",
     "angular-animate": "1.5.11",
     "angular-aria": "1.5.11",
@@ -24,15 +34,15 @@
     "angular-sanitize": "1.5.11",
     "angular-ui-router": "0.3.0",
     "angular-uuid": "0.0.2",
-    "babel-core": "6.24.0",
-    "babel-loader": "6.4.0",
+    "babel-core": "^7.0.0-0",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-angularjs-annotate": "^0.10.0",
     "babel-polyfill": "6.23.0",
-    "babel-preset-es2015": "6.24.0",
     "grunt": "1.0.1",
     "material-design-lite": "1.1.3",
     "ng-annotate-loader": "0.1.0",
     "node-sass": "4.5.0",
     "text-loader": "0.0.1",
-    "webpack": "1.13.0"
+    "webpack": "4.41.4"
   }
 }
