--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,11 +5,12 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "js": "./node_modules/webpack/bin/webpack.js --config Webpack.js --mode=production --display-error-details --bail",
-    "js-dev": "./node_modules/webpack/bin/webpack.js --config Webpack.js --mode=development --display-error-details --bail",
+    "js": "./node_modules/webpack/bin/webpack.js --mode=production --display-error-details --bail",
+    "js-dev": "./node_modules/webpack/bin/webpack.js --mode=development --display-error-details --bail",
     "sass": "./node_modules/node-sass/bin/node-sass scss/main.scss ../public/stylesheets/main.css",
     "compile": "npm run js && npm run sass",
-    "dev": "npm run js-dev && npm run sass"
+    "dev": "npm run js-dev && npm run sass",
+    "devrun": "webpack-dev-server --open"
   },
   "babel": {
     "presets": [
@@ -43,6 +44,8 @@
     "ng-annotate-loader": "0.1.0",
     "node-sass": "4.5.0",
     "text-loader": "0.0.1",
-    "webpack": "4.41.4"
+    "webpack": "4.41.4",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.1"
   }
 }
