--- a/nginx/promotions.conf
+++ b/nginx/promotions.conf
@@ -20,24 +20,8 @@ server {
     ssl_ciphers HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers on;
 
-    # Proxy the Websocket connection to the Webpack server - see https://stackoverflow.com/a/40549432/438886
-    location /sockjs-node/ {
-        proxy_set_header X-Real-IP  $remote_addr;
-        proxy_set_header X-Forwarded-For $remote_addr;
-        proxy_set_header Host $host;
-
-        proxy_pass http://promo.thegulocal.com:9501; ## webpack-dev-server proxy
-
-        proxy_redirect off;
-
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-    }
-
     location / {
-        proxy_pass http://promo.thegulocal.com:9501; ## webpack-dev-server proxy
-        proxy_max_temp_file_size 0;
+        proxy_pass http://localhost:9500/;
         proxy_set_header Host $http_host;
     }
 }
