add in cfn template path to riffraff

--- a/conf/riff-raff.yaml
+++ b/conf/riff-raff.yaml
@@ -5,6 +5,7 @@ deployments:
     type: cloud-formation
     app: promotions-tool
     parameters:
+      templatePath: cfn.yaml
       amiTags:
         Recipe: bionic-membership-ARM
         AmigoStage: PROD
