--- a/conf/application.conf
+++ b/conf/application.conf
@@ -13,6 +13,18 @@ play.http {
 
 touchpoint.backend.environments {
   DEV {
+    digitalVoucher {
+      everydayplus="2c92c0f86fa49142016fa49eaa492988"
+      everyday="2c92c0f86fa49142016fa49ea56a2938"
+      sixdayplus="2c92c0f86fa49142016fa49ea1af28c8"
+      sixday="2c92c0f86fa49142016fa49e9b9a286f"
+      weekendplus="2c92c0f86fa49142016fa49eaecb29dd"
+      weekend="2c92c0f86fa49142016fa49ea0d028b6"
+      sundayplus="2c92c0f86fa49142016fa49ea90e2976"
+      sunday="2c92c0f86fa49142016fa49eb0a42a01"
+      saturdayplus="2c92c0f86fa49142016fa49eb1732a39"
+      saturday="2c92c0f86fa49142016fa49ea442291b"
+    }
     voucher {
       everydayplus="2c92c0f95aff3b53015b10469bbf5f5f"
       everyday="2c92c0f9555cf10501556e84a70440e2"
@@ -56,6 +68,18 @@ touchpoint.backend.environments {
 
   }
   UAT {
+    digitalVoucher {
+      everydayplus="2c92c0f870f682820171070481bf4264"
+      everyday="2c92c0f870f682820171070474ee419d"
+      sixdayplus="2c92c0f870f682820171070470ad4120"
+      sixday="2c92c0f870f68282017107047d054230"
+      weekendplus="2c92c0f870f682820171070478d441f5"
+      weekend="2c92c0f870f682820171070477d841e2"
+      sundayplus="2c92c0f870f68282017107047b214214"
+      sunday="2c92c0f870f682820171070487f142c4"
+      saturdayplus="2c92c0f870f682820171070489d542da"
+      saturday="2c92c0f870f682820171070488df42ce"
+    }
     voucher {
       everydayplus="2c92c0f955ca02920155da240cdb4399"
       everyday="2c92c0f855c9f4b20155d9f1d3d4512a"
@@ -100,6 +124,18 @@ touchpoint.backend.environments {
 
   }
   PROD {
+    digitalVoucher {
+      everydayplus="2c92a00870ec598001710740d3d03035"
+      everyday="2c92a00870ec598001710740c78d2f13"
+      sixdayplus="2c92a00870ec598001710740c4582ead"
+      sixday="2c92a00870ec598001710740ca532f69"
+      weekendplus="2c92a00870ec598001710740c6672ee7"
+      weekend="2c92a00870ec598001710740d24b3022"
+      sundayplus="2c92a00870ec598001710740cf9e3004"
+      sunday="2c92a00870ec598001710740d0d83017"
+      saturdayplus="2c92a00870ec598001710740ce702ff0"
+      saturday="2c92a00870ec598001710740cdd02fbd"
+    }
     voucher {
       everydayplus="2c92a0ff56fe33f50157040bbdcf3ae4"
       everyday="2c92a0fd56fe270b0157040dd79b35da"
