add monthly tickbox to the guardian weekly promo editing page

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -53,15 +53,17 @@ touchpoint.backend.environments {
       domestic {
         yearly="2c92c0f965d280590165f16b1b9946c2"
         quarterly="2c92c0f965dc30640165f150c0956859"
-        oneyear="2c92c0f867cae0700167eff921734f7b"
+        monthly="2c92c0f878ac40300178acaa04bb401d"
         six="2c92c0f965f212210165f69b94c92d66"
+        oneyear="2c92c0f867cae0700167eff921734f7b"
         threemonths="2c92c0f96ded216a016df491134d4091"
       }
       row {
         yearly="2c92c0f965f2122101660fb33ed24a45"
         quarterly="2c92c0f965f2122101660fb81b745a06"
-        oneyear="2c92c0f967caee410167eff78e7b5244"
+        monthly="2c92c0f878ac402c0178acb3a90a3620"
         six="2c92c0f965f2122101660fbc75a16c38"
+        oneyear="2c92c0f967caee410167eff78e7b5244"
         threemonths="2c92c0f96df75b5a016df81ba1c62609"
       }
     }
@@ -108,15 +110,17 @@ touchpoint.backend.environments {
       domestic {
         yearly="2c92c0f9660fc4d70166107fa5412641"
         quarterly="2c92c0f8660fb5d601661081ea010391"
-        oneyear="2c92c0f867cae0700167f043870d6d0e"
+        monthly="2c92c0f879a6a11e0179ae3fa5bb1313"
         six="2c92c0f8660fb5dd016610858eb90658"
+        oneyear="2c92c0f867cae0700167f043870d6d0e"
         threemonths="2c92c0f96df75b51016df8444f36362f"
       }
       row {
         yearly="2c92c0f9660fc4d70166109a2eb0607c"
         quarterly="2c92c0f9660fc4d70166109c01465f10"
-        oneyear="2c92c0f967caee360167f044cd0d4adc"
+        monthly="2c92c0f979a6b0910179ae4611f1256f"
         six="2c92c0f9660fc4c70166109dfd08092c"
+        oneyear="2c92c0f967caee360167f044cd0d4adc"
         threemonths="2c92c0f96df75b5a016df84084fb356d"
       }
 
@@ -162,17 +166,19 @@ touchpoint.backend.environments {
     }
     weekly {
       domestic {
-        oneyear="2c92a0ff67cebd0d0167f0a1a834234e"
         yearly="2c92a0fe6619b4b901661aa8e66c1692"
         quarterly="2c92a0fe6619b4b301661aa494392ee2"
+        monthly="2c92a0fd79ac64b00179ae3f9d474960"
         six="2c92a0086619bf8901661aaac94257fe"
+        oneyear="2c92a0ff67cebd0d0167f0a1a834234e"
         threemonths="2c92a00e6dd988e2016df85387417498"
       }
       row {
-        oneyear="2c92a0ff67cebd140167f0a2f66a12eb"
         yearly="2c92a0fe6619b4b601661ab300222651"
         quarterly="2c92a0086619bf8901661ab02752722f"
+        monthly="2c92a0ff79ac64e30179ae45669b3a83"
         six="2c92a0086619bf8901661ab545f51b21"
+        oneyear="2c92a0ff67cebd140167f0a2f66a12eb"
         threemonths="2c92a0076dd9892e016df8503e7c6c48"
       }
     }
