--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -4,9 +4,10 @@
 name: Snyk
 
 on:
-  schedule:
-    - cron: "0 6 * * *"
   push:
+    branches:
+      - main
+      - jd-snyk-fix
   workflow_dispatch:
 
 jobs:
