--- a/cloudformation/memsub-promotions-cf.yaml
+++ b/cloudformation/memsub-promotions-cf.yaml
@@ -222,8 +222,8 @@ Resources:
               mkdir -p /etc/gu
               aws s3 cp s3://gu-reader-revenue-private/${Stack}/${App}/${Stage}/memsub-promotions-keys.conf /etc/gu
               aws s3 cp s3://gu-reader-revenue-private/${Stack}/${App}/${Stage}/memsub-promotions.private.conf /etc/gu
-              chown promotions-tool /etc/gu/memsub-promotions-keys.conf
-              chmod 0600 /etc/gu/memsub-promotions-keys.conf
+              chown promotions-tool /etc/gu/memsub-promotions-keys.conf /etc/gu/memsub-promotions.private.conf
+              chmod 0600 /etc/gu/memsub-promotions-keys.conf /etc/gu/memsub-promotions.private.conf
               wget https://s3.amazonaws.com/aws-cloudwatch/downloads/latest/awslogs-agent-setup.py
 
               sed -i -e "s/__DATE/$(date +%F)/" -e 's/__STAGE/${Stage}/' $CONF_DIR/logger.conf
