update lambdas to handle node update issues uncovered during testing

--- a/lambdas/package.json
+++ b/lambdas/package.json
@@ -20,5 +20,7 @@
     "riffraff": "VERBOSE=true ARTEFACT_PATH=$PWD yarn riffraff-artefact",
     "clean": "rm -rf dist && rm -rf target"
   },
-  "dependencies": {}
+  "dependencies": {
+    "aws-sdk": "^2.1143.0"
+  }
 }
