--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -10,5 +10,6 @@ jobs:
       DEBUG: true
       ORG: guardian-test
       SKIP_NODE: false
+      NODE_VERSION_OVERRIDE: 12
     secrets:
        SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
