--- a/conf/riff-raff.yaml
+++ b/conf/riff-raff.yaml
@@ -7,7 +7,7 @@ deployments:
     parameters:
       templatePath: cfn.yaml
       amiTags:
-        Recipe: bionic-membership-java11
+        Recipe: jammy-membership-java11
         AmigoStage: PROD
       amiParameter: AmiId
       amiEncrypted: true
