--- a/conf/application.conf
+++ b/conf/application.conf
@@ -12,7 +12,7 @@ play.http {
 }
 
 touchpoint.backend.environments {
-  DEV {
+  CODE {
     digitalVoucher {
       everydayplus="2c92c0f86fa49142016fa49eaa492988"
       everyday="2c92c0f86fa49142016fa49ea56a2938"
@@ -66,64 +66,6 @@ touchpoint.backend.environments {
         oneyear="2c92c0f967caee410167eff78e7b5244"
         threemonths="2c92c0f96df75b5a016df81ba1c62609"
       }
-    }
-
-  }
-  UAT {
-    digitalVoucher {
-      everydayplus="2c92c0f870f682820171070481bf4264"
-      everyday="2c92c0f870f682820171070474ee419d"
-      sixdayplus="2c92c0f870f682820171070470ad4120"
-      sixday="2c92c0f870f68282017107047d054230"
-      weekendplus="2c92c0f870f682820171070478d441f5"
-      weekend="2c92c0f870f682820171070477d841e2"
-      sundayplus="2c92c0f870f68282017107047b214214"
-      sunday="2c92c0f870f682820171070487f142c4"
-      saturdayplus="2c92c0f870f682820171070489d542da"
-      saturday="2c92c0f870f682820171070488df42ce"
-    }
-    voucher {
-      everydayplus="2c92c0f955ca02920155da240cdb4399"
-      everyday="2c92c0f855c9f4b20155d9f1d3d4512a"
-      sixdayplus="2c92c0f855c9f4540155da2607db6402"
-      sixday="2c92c0f955ca02910155da254a641fb3"
-      weekendplus="2c92c0f855c9f4b20155d9f1dd0651ab"
-      weekend="2c92c0f855c9f4b20155d9f1db9b5199"
-      sundayplus="2c92c0f855c9f4b20155d9f1cc69508a"
-      sunday="2c92c0f95aff3b54015b0ee0eb500b2e"
-      saturdayplus="2c92c0f961f9cf350161fc0454283f3e"
-      saturday="2c92c0f961f9cf300161fc02a7d805c9"
-    }
-    delivery {
-      everydayplus="2c92c0f955ca02900155da2803b02e33"
-      everyday="2c92c0f955ca02900155da27f55b2d5f"
-      sixdayplus="2c92c0f955ca02900155da27f29e2d13"
-      sixday="2c92c0f955ca02900155da27ff142e01"
-      weekendplus="2c92c0f955ca02900155da27f9402dad"
-      weekend="2c92c0f955ca02900155da27f83c2d9b"
-      sundayplus="2c92c0f955ca02900155da27f4872d4d"
-      sunday="2c92c0f95aff3b54015b0ede33bc04f2"
-      saturdayplus="2c92c0f961f9cf300161fbfa943b6f54"
-      saturday="2c92c0f85b8fa30e015b9108a83253c7"
-    }
-    weekly {
-      domestic {
-        yearly="2c92c0f9660fc4d70166107fa5412641"
-        quarterly="2c92c0f8660fb5d601661081ea010391"
-        monthly="2c92c0f879a6a11e0179ae3fa5bb1313"
-        six="2c92c0f8660fb5dd016610858eb90658"
-        oneyear="2c92c0f867cae0700167f043870d6d0e"
-        threemonths="2c92c0f96df75b51016df8444f36362f"
-      }
-      row {
-        yearly="2c92c0f9660fc4d70166109a2eb0607c"
-        quarterly="2c92c0f9660fc4d70166109c01465f10"
-        monthly="2c92c0f979a6b0910179ae4611f1256f"
-        six="2c92c0f9660fc4c70166109dfd08092c"
-        oneyear="2c92c0f967caee360167f044cd0d4adc"
-        threemonths="2c92c0f96df75b5a016df84084fb356d"
-      }
-
     }
 
   }
