--- a/conf/touchpoint.CODE.conf
+++ b/conf/touchpoint.CODE.conf
@@ -1,6 +1,6 @@
 # ***NO PRIVATE CREDENTIALS IN THIS FILE *** - use membership-keys.conf in S3 for private data
 touchpoint.backend.environments {
-    DEV {
+    CODE {
         identity {
             apiUrl=""
             apiToken=""
@@ -17,9 +17,9 @@ touchpoint.backend.environments {
         }
 
         dynamodb {
-            promotions = "MembershipSub-Promotions-DEV"
-            campaigns = "MembershipSub-Campaigns-DEV"
-            attributes = "MembershipAttributes-DEV"
+            promotions = "MembershipSub-Promotions-CODE"
+            campaigns = "MembershipSub-Campaigns-CODE"
+            attributes = "MembershipAttributes-CODE"
         }
         stripe {
             api.key {
