--- a/conf/reference.conf
+++ b/conf/reference.conf
@@ -1,5 +1,4 @@
 # Touchpoint-backend environment-specific config -
 # ***NO PRIVATE CREDENTIALS in these files***
-include classpath("touchpoint.DEV.conf")
-include classpath("touchpoint.UAT.conf")
+include classpath("touchpoint.CODE.conf")
 include classpath("touchpoint.PROD.conf")
