--- a/.github/workflows/memsub-promotions.yml
+++ b/.github/workflows/memsub-promotions.yml
@@ -26,13 +26,13 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Use Node.js
+        working-directory: ./frontend
         uses: actions/setup-node@v3
-        working-directory: ./cdk
         with:
           node-version-file: '.nvmrc'
 
       - name: Test + build
-        working-directory: ./cdk
+        working-directory: ./frontend
         run: |
           npm install
           npm compile
