--- a/.github/workflows/memsub-promotions.yml
+++ b/.github/workflows/memsub-promotions.yml
@@ -26,10 +26,9 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Use Node.js
-        working-directory: ./frontend
         uses: actions/setup-node@v3
         with:
-          node-version-file: '.nvmrc'
+          node-version-file: './frontend/.nvmrc'
 
       - name: Test + build
         working-directory: ./frontend
