--- a/.github/workflows/memsub-promotions.yml
+++ b/.github/workflows/memsub-promotions.yml
@@ -34,7 +34,7 @@ jobs:
         working-directory: ./frontend
         run: |
           npm install
-          npm compile
+          npm run compile
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
