--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,14 +6,18 @@
   "scripts": {
     "clean": "echo 'Cleaning Public Folder' && rimraf ../public/javascripts && rimraf ../public/stylesheets",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-prod": "webpack --mode=production --display-error-details --bail",
-    "build-dev": "webpack --mode=development --display-error-details --bail",
-    "compile": "npm run clean && npm run build-prod",
+    "build-prod": "webpack --mode=production --bail",
+    "build-dev": "webpack --mode=development --bail",
+    "compile": "yarn clean && yarn build-prod",
     "devrun": "webpack-dev-server --port 9501 --public promo.thegulocal.com --disable-host-check"
   },
   "babel": {
-    "presets": ["@babel/preset-env"],
-    "plugins": ["angularjs-annotate"]
+    "presets": [
+      "@babel/preset-env"
+    ],
+    "plugins": [
+      "angularjs-annotate"
+    ]
   },
   "devDependencies": {
     "@babel/core": "^7.7.7",
@@ -36,13 +40,13 @@
     "css-loader": "^3.4.1",
     "grunt": "1.0.1",
     "material-design-lite": "1.1.3",
-    "mini-css-extract-plugin": "^0.4.0",
-    "node-sass": "4.13.0",
+    "mini-css-extract-plugin": "^2.7.6",
     "rimraf": "^3.0.0",
+    "sass": "^1.63.6",
     "sass-loader": "^8.0.0",
     "text-loader": "0.0.1",
-    "webpack": "4.41.4",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.1"
+    "webpack": "5.88.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   }
 }
