--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "build-prod": "webpack --mode=production --bail",
     "build-dev": "webpack --mode=development --bail",
     "compile": "yarn clean && yarn build-prod",
-    "devrun": "webpack-dev-server --port 9501 --public promo.thegulocal.com --disable-host-check"
+    "devrun": "webpack-dev-server --port 9501 --host promo.thegulocal.com"
   },
   "babel": {
     "presets": [
