salesforce lambda: load config from S3 (#257)
* salesforce lambda: load config from S3

* tidy

* fix url

* remove kms

--- a/cloudformation/memsub-promotions-lambdas-cf.yaml
+++ b/cloudformation/memsub-promotions-lambdas-cf.yaml
@@ -130,6 +130,12 @@ Resources:
             - s3:PutObjectAcl
             Resource:
             - arn:aws:s3:::ophan-raw-membership-promo-code-view/*
+          - Effect: Allow
+            Action:
+            - s3:GetObject
+            Resource:
+            - arn:aws:s3:::gu-reader-revenue-private/membership/promotions-tool/*
+
   PromoCodeViewLambdaFunctionCODE:
     Type: AWS::Lambda::Function
     Properties:
@@ -189,37 +195,6 @@ Resources:
       Runtime: nodejs12.x
       Timeout: 60
 
-  SalesforceLambdaKMSKey:
-    Type: AWS::KMS::Key
-    Properties:
-      Description: !Sub Used by the MembershipSub-Promotions Salesforce Lambda to encrypt and decrypt any environment variables
-      KeyPolicy:
-        Version: '2012-10-17'
-        Id: !Sub MembershipSub-Promotions-Salesforce-Lambda-kms-key-policy
-        Statement:
-        - Sid: Enable IAM User Permissions
-          Effect: Allow
-          Principal:
-            AWS: !Sub arn:aws:iam::${AWS::AccountId}:root
-          Action: kms:*
-          Resource: "*"
-        - Sid: Allow use of the key
-          Effect: Allow
-          Principal:
-            AWS: !GetAtt [MembershipSubPromoCodeViewETLRole, Arn]
-          Action:
-          - kms:Encrypt
-          - kms:Decrypt
-          - kms:ReEncrypt*
-          - kms:GenerateDataKey*
-          - kms:DescribeKey
-          Resource: "*"
-  SalesforceLambdaKMSKeyAlias:
-    Type: AWS::KMS::Alias
-    Properties:
-      AliasName: !Sub alias/MembershipSub-Promotions-Salesforce-Lambda-kms-key
-      TargetKeyId: !Ref 'SalesforceLambdaKMSKey'
-
   PromoCodeViewSalesforceLambdaFunctionCODE:
     Type: AWS::Lambda::Function
     Properties:
@@ -233,14 +208,7 @@ Resources:
       Role: !GetAtt [MembershipSubPromoCodeViewETLRole, Arn]
       Runtime: nodejs12.x
       Timeout: 60
-      KmsKeyArn: !GetAtt SalesforceLambdaKMSKey.Arn
-      Environment:
-        Variables:
-          client_id: ''
-          client_secret: ''
-          password: ''
-          salesforce_url: 'test.salesforce.com'
-          username: ''
+
   PromoCodeViewSalesforceLambdaFunctionPROD:
     Type: AWS::Lambda::Function
     Properties:
@@ -254,14 +222,7 @@ Resources:
       Role: !GetAtt [MembershipSubPromoCodeViewETLRole, Arn]
       Runtime: nodejs12.x
       Timeout: 60
-      KmsKeyArn: !GetAtt SalesforceLambdaKMSKey.Arn
-      Environment:
-        Variables:
-          client_id: ''
-          client_secret: ''
-          password: ''
-          salesforce_url: ''
-          username: ''
+
   ScheduledBackupLambdaPROD:
     Type: AWS::Lambda::Function
     Properties:
@@ -275,7 +236,6 @@ Resources:
       Role: !GetAtt [MembershipSubPromotionsDataBackupLambdaRole, Arn]
       Runtime: nodejs12.x
       Timeout: 60
-      KmsKeyArn: !GetAtt SalesforceLambdaKMSKey.Arn
   BackupSchedule:
     Type: AWS::Events::Rule
     Properties:
